--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,14 @@
     <version>1.4.4.RELEASE</version>
   </parent>
   <modules>
-    <module>config-server</module>
-    <module>product-service</module>
-    <module>login-service</module>
-    <module>sales-service</module>
     <module>eureka-server</module>
+    <module>config-server</module>
     <module>zuul-server</module>
+    <module>authentication-service</module>
+    <module>product-service</module>
+    <module>stock-service</module>
+    <module>sales-service</module>
+    <module>payment-service</module>
   </modules>
   <build>
     <plugins>
